app/assets/stylesheets/pages/_about.scss
.about-info {
  text-align: center;
}

.live {
  font-size: 20px;
}

.grow {
  font-size: 20px;
}

.love {
  font-size: 20px;
}

.about-text {
  font-size: 20px;
}

.about-q {
  text-align: center;
}

.about-img {
  width: 100vw;
}

.about-container-cards {
  background-color: white;
  border-radius: 8px;
  padding-top: 4%;
  padding-bottom: 4%;
  padding-right: 3%;
  padding-left: 3%;
  margin: 3%;
}

.card-about {
  display:flex;
  justify-content: center;
  align-items: center;
  margin-bottom: -10px;
  margin-top: -10px;
}

.card-about-image {
  margin-top: 4px;
  padding-right: 4%;
  width: 40%;
  img {
    width: 100%;
  }
}


.card-about-content {
  margin-top: 4px;
  width: 60%;
}

.guide-title {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  font-family: 'Roboto', sans-serif
}

.g-text {
  font-size: 16px;
  font-family: 'Roboto', sans-serif
}

